--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta charset="utf-8" />
     <title>Run Buddy</title>
   </head>
@@ -29,7 +30,6 @@
           </li>
         </ul>
       </nav>
-      <h1>RUN BUDDY</h1>
     </header>
 
     <!-- hero/jumbotron -->
