--- a/index.html
+++ b/index.html
@@ -151,6 +151,31 @@
     <!-- "reach out" section -->
     <section>
       <h2>Reach Out</h2>
+
+      <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104532.64207747!2d-80.91530769167544!3d35.04060832569187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88569d2895f6d23b%3A0x354bc674e1c11c3e!2sBallantyne%2C%20Charlotte%2C%20NC%2028277!5e0!3m2!1sen!2sus!4v1636563359960!5m2!1sen!2sus" 
+        width="400" 
+        height="400" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+      </iframe>
+      </div>
+
+      <div>
+        <h3>Run Buddy</h3>
+        <p>Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345 <br />
+          P: 55.RUN.BUDZ (55.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
     </section>
 
     <!-- footer -->
