add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p> ;lkasdjv;knba;iogwregi  w;ekgnsd;vahsidobasfd;kbnafbgoeird
+          kkajs;gljeorihjadflkbadfblknadfb
+          ;kdnfab;fiobjerl;krbhqae
+        </p>
+      </div>
       <div>
           <div class="hero-form">
         <h3>Get Started Today!</h3>
